--- a/ionic_project/Toilettes/src/pages/home/home.scss
+++ b/ionic_project/Toilettes/src/pages/home/home.scss
@@ -1,3 +1,11 @@
-page-home {
+ion-app._gmaps_cdv_ .nav-decor{
+  background-color: transparent !important;
+}
 
+
+page-home {
+    #map {
+        width: 100%;
+        height: 100%;
+    }
 }
