Fix note styles (text-align)

--- a/ionic_project/Toilettes/src/pages/add/add.scss
+++ b/ionic_project/Toilettes/src/pages/add/add.scss
@@ -1,7 +1,10 @@
 page-add {
 
-    .note {
+    .noteLabel {
         padding-left: 11px;
+    }
+    .note {
+        text-align: right;
     }
     ul {
         padding: 0px;
