--- a/ionic_project/Toilettes/src/pages/add/add.scss
+++ b/ionic_project/Toilettes/src/pages/add/add.scss
@@ -1,10 +1,22 @@
-page-add {
+ion-app._gmaps_cdv_ .nav-decor{
+  background-color: transparent !important;
+}
 
+
+
+page-add {
+    #mapAdd {
+        width: 100%;
+        height: 30%;
+    }
     .noteLabel {
         padding-left: 11px;
     }
     .note {
         text-align: right;
+    }
+    .center {
+        text-align: center;
     }
     ul {
         padding: 0px;
