--- a/ionic_project/Toilettes/src/pages/toilettes/toilettes.scss
+++ b/ionic_project/Toilettes/src/pages/toilettes/toilettes.scss
@@ -6,6 +6,9 @@ ion-app._gmaps_cdv_ .nav-decor{
 page-toilettes {
     #map {
         width: 100%;
-        height: 100%;
+        height: 90%;
+    }
+    .center {
+        text-align: center;
     }
 }
